dse-istio-igw/my-nginx-gateway-8083.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-nginx-gateway-8083
  #namespace: my-namespace
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8083
      name: http
      protocol: HTTP
    hosts:
      - "mynginx.example.com"
