dse-istio-igw/my-nginx-gateway-9403.2.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-nginx-gateway-9403
  #namespace: my-namespace
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 9403
      name: tcp-9403
      protocol: TCP
    hosts:
      - "*"
