dse-istio-igw/my-nginx-virtualservice-9403.2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-nginx-virtualservice-9403
  #namespace: my-namespace
spec:
  hosts:
  - "*"
  gateways:
  - my-nginx-gateway-9403
  tcp:
  - match:
    - port: 9403
    route:
    - destination:
        host: webserver
        port:
          number: 80
